@@ -17,7 +17,6 @@ import uk.gov.hmcts.ethos.replacement.docmosis.helpers.HearingsHelper;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.ecm.common.helpers.UtilHelper.formatLocalDate;
 
@@ -50,7 +49,7 @@ public class BundlesRespondentService {
         }
         DynamicFixedListType listType = DynamicFixedListType.from(caseData.getHearingCollection().stream()
                 .map(this::createValueType)
-                .collect(Collectors.toList())
+                .toList()
         );
 
         caseData.setBundlesRespondentSelectHearing(listType);
